app/assets/stylesheets/application.css
/* ... */
/* This can't go inline or display: none for when the turbo-frame is loading won't work */
.appointment-slots, .duration-selectors {
  display: flex;
}

#available_appointments:not(.form-incomplete)[busy=""] {
  .loading-overlay {
    display: flex;
    animation: skeleton-loading 1s linear infinite alternate;
    margin-top: -1rem;
  }

  fieldset > *:not(legend):not(.duration-selectors) {
    display: none;
  }
}


#available_appointments .alert {
  display: none;
}

/* Show alert when turbo-frame src isn't set because form doesn't have all required fields */
#available_appointments.form-incomplete {
  fieldset > *:not(legend) {
    display: none;
  }
  .alert {
    display: block;
  }
}

.appointment-form {
  --bs-border-color: var(--stanford-50-black);

  .btn-check:checked + .btn {
    --bs-border-color: var(--stanford-digital-blue);
    background-color: var(--stanford-digital-blue);
    color: white;
  }

  .btn-check:checked + .btn::before {
    content: "\f633"; /* check-lg icon */
    display: inline-block;
    font-family: "bootstrap-icons";
    font-size: .85rem;
    margin-right: 0.25rem;
    text-decoration: none;
    vertical-align: middle;
  }
}

/* Available time slots get fixed widths to line up in uniform rows/columns */
#available_appointments .btn {
  width: 6rem;
  text-align: center;
}

/* EAD Item selector styles */

#items {
  .series-title {
    font-size: 1.125rem; 
  }
  .form-check-label {
    color: var(--bs-link-color);
  }
}

.disclosure-icon {
  font-size: 1rem;
}

.redesign-required-label::after {
  content: '*required';
  color: var(--stanford-cardinal);
  margin-left: 5px;
  font-weight: normal;
}

.selected-items-container .accordion-item:last-child .next-item {
  display: none;
}

.appointments-item {
  flex-wrap: wrap;
}

#reading:has(.appointments-item:only-child),
#pickup:has(.appointments-item:only-child) {
  .hide-when-1-item {
    display: none;
  }
}

.selected-items-container .appointments-item:not(:only-child) {
  /* .border */
  border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;

  /* .bg-light */
  --bs-bg-opacity: 1;
  background: rgba(var(--bs-light-rgb),var(--bs-bg-opacity)) !important;

  .possibly-visually-hidden-appointments-label {
    /* .visually-hidden */
    width: 1px !important;
    height: 1px !important;
    padding: 0 !important;
    margin: -1px !important;
    overflow: hidden !important;
    clip: rect(0, 0, 0, 0) !important;
    white-space: nowrap !important;
    border:0 !important;
    position:absolute !important
  }

  .create-appointment-section {
    display: none;
  }

  @media (min-width: 768px) {
    flex-wrap: nowrap;
  }
}

.selected-items-container .appointments-item:only-child,
.selected-items-container .accordion-item:only-child
{
  --bs-accordion-border-width: 0;
  --bs-accordion-active-bg: transparent;
  --bs-accordion-btn-bg: transparent;

  .accordion-button {
    background-color: transparent;
    border-width: 0;
  }

  .selected-item-status, .selected-item-remove, .disclosure-icon {
    display: none;
  }

  .selected-item-title {
    background-color: var(--stanford-fog-light);
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
    padding-top: 4px;
    margin-bottom: 1rem;
  }
}

.confirmation {
  .card {
    --bs-card-spacer-y: 0;
    --bs-card-spacer-x: 0;
  }

  .accordion {
    --bs-accordion-border-width: 0;
    --bs-accordion-border-radius: 0;
  }
  
  .accordion-item {
    border-bottom: 1px solid var(--stanford-20-black)!important;
  }
}

.custom-select {
  .selected {
    background-color: var(--bs-primary-bg-subtle);
    &::before {
      content: "\f633"; /* check-lg icon */
      display: inline-block;
      font-family: "bootstrap-icons";
      margin-right: 0.25rem;
      text-decoration: none;
      vertical-align: middle;
      position: absolute;
      left: 0.3rem;
      margin-top:0.5rem;
    }
  }
}

.btn-delete {
  --bs-btn-color: rgba(var(--stanford-cardinal-rgb), 1);
  --bs-btn-bg: #fff;
  --bs-btn-border-color: rgba(var(--stanford-cardinal-rgb), 1);
  --bs-btn-hover-color: rgba(var(--stanford-cardinal-rgb), 1);
  --bs-btn-hover-bg: #fff;
  --bs-btn-hover-border-color: rgba(var(--stanford-cardinal-rgb), 1);
  --bs-btn-disabled-color: rgba(var(--stanford-cardinal-rgb), 0.5);
  --bs-btn-disabled-bg: rgba(130, 0, 0, 0.2);
  --bs-btn-disabled-border-color: rgba(var(--stanford-cardinal-rgb), 0.3);
}

.modal-location .hide-when-1-item {
  display: none;
}

